--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+    padding: 0px !important;
+    margin: 0px !important;
+}
+
+.notice{
+    font-size: 1.6rem;
+    color: #04AA6D;
+    text-align: center;
+    margin-bottom: 15px;
+}
